tests/codegen/fail/scalar/derive_input/attr_transparent_unit_struct.rs
use juniper::graphql_scalar;

#[graphql_scalar]
#[graphql(transparent)]
struct ScalarSpecifiedByUrl;

fn main() {}
