tests/codegen/fail/scalar/derive_input/attr_transparent_unit_struct.stderr
error: GraphQL scalar `transparent` attribute argument requires exactly 1 field
 --> fail/scalar/derive_input/attr_transparent_unit_struct.rs:5:1
  |
5 | struct ScalarSpecifiedByUrl;
  | ^^^^^^

error: cannot find attribute `graphql` in this scope
 --> fail/scalar/derive_input/attr_transparent_unit_struct.rs:4:3
  |
4 | #[graphql(transparent)]
  |   ^^^^^^^
